--- a/notebooks/1_scrapper.ipynb
+++ b/notebooks/1_scrapper.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "import bs4\n",
-    "import requests"
+    "import requests\n",
+    "import re\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -39,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "271"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "catpages_short = []\n",
     "\n",
@@ -56,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10758"
+       "10759"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,37 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = 'https://www.recetasgratis.net/Recetas-de-Verduras-listado_receta-7_47.html'\n",
-    "\n",
-    "test_list = []\n",
-    "\n",
-    "r = requests.get(test)\n",
-    "soup = bs4.BeautifulSoup(r.content, 'html.parser')\n",
-    "recipe = soup.find_all('a', attrs={'class': 'titulo titulo--resultado'})\n",
-    "\n",
-    "\n",
-    "for i in list(range(0,len(recipe))): \n",
-    "    test_list.append(recipe[i]['href'])\n",
-    "\n",
-    "  \n",
-    "\n",
-    "len(test_list)\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -162,70 +148,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "soup.find_all('div', {'class': 'resultado link'}"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.recetasgratis.net/receta-de-torrejas-de-arroz-75058.html'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url = 'https://www.recetasgratis.net/receta-de-torrejas-de-arroz-75058.html'\n",
-    "r = requests.get(url)\n",
-    "soup = bs4.BeautifulSoup(r.content, 'html.parser')\n",
-    "r.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recipe = soup.find_all('div', attrs={'class': 'recipe-info'})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "comensales = recipe[0].find('span', attrs={'class': 'property comensales'}).text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Response [301]>]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "if len(r.history) > 0\n",
-    "pass"
+    "url = 'https://www.recetasgratis.net/receta-de-solomillo-de-pavo-a-la-cerveza-74915.html'\n",
+    "soup = bs4.BeautifulSoup(requests.get(url).content, 'html.parser')\n",
+    "recipe = soup.find_all('div', attrs={'class': 'recipe-info'})"
    ]
   },
   {
@@ -234,6 +167,356 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.recetasgratis.net/receta-de-nuggets-de-pollo-al-horno-75064.html'"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recipe_url_list = []\n",
+    "recipe_url = requests.get(url).url\n",
+    "recipe_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Solomillo de pavo a la cerveza'"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = soup.find_all('h1', attrs={'class': 'titulo titulo--articulo'})[0].text[10:]\n",
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aves y caza'"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categoria = re.findall('(^.+?)\\\\n', (soup.find_all('ul', attrs={'class': 'breadcrumb'}))[0].text[9:])[0]\n",
+    "categoria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2'"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comensales = recipe[0].find('span', attrs={'class': 'property comensales'}).text[:-11]\n",
+    "comensales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'30m'"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duracion = recipe[0].find('span', attrs={'class': 'property duracion'}).text\n",
+    "duracion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Plato principal'"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plato = recipe[0].find('span', attrs={'class': 'property para'}).text\n",
+    "plato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dificultad muy baja'"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dificultad = recipe[0].find('span', attrs={'class': 'property dificultad'}).text\n",
+    "dificultad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Coste barato, Popular en Otoño-Invierno, Salteado '"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caracteristicas = (recipe[0].find('div', attrs={'class': 'properties inline'}).text)[30:]\n",
+    "caracteristicas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'200 gramos de solomillo de pavo , 6 dientes de ajo pequeños , 1 pizca de sal al gusto , 1 pizca de pimienta al gusto , 100 gramos de harina de trigo , 20 mililitros de aceite , 150 mililitros de cerveza , 2 rodajas de naranja (opcional) , 2 hojas de laurel (opcional) '"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ingredients = ', '.join(recipe[0].find('div', attrs={'class': 'ingredientes'}).text.split('\\n\\n\\n\\n\\n'))[2:].replace('\\n','')\n",
+    "ingredients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recipe_dict = {\n",
+    "    'URL': [url],\n",
+    "    'Nombre': [name],\n",
+    "    'Categoria': [categoria],\n",
+    "    'Comensales': [comensales],\n",
+    "    'Tiempo': [duracion],\n",
+    "    'Tipo': [plato],\n",
+    "    'Dificultad': [dificultad],\n",
+    "    'Caracteristicas': [caracteristicas],\n",
+    "    'Ingredientes':[ingredients],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Categoria</th>\n",
+       "      <th>Comensales</th>\n",
+       "      <th>Tiempo</th>\n",
+       "      <th>Tipo</th>\n",
+       "      <th>Dificultad</th>\n",
+       "      <th>Caracteristicas</th>\n",
+       "      <th>Ingredientes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.recetasgratis.net/receta-de-tortit...</td>\n",
+       "      <td>Tortitas de pollo en salsa roja</td>\n",
+       "      <td>Aves y caza</td>\n",
+       "      <td>6</td>\n",
+       "      <td>30m</td>\n",
+       "      <td>Plato principal</td>\n",
+       "      <td>Dificultad baja</td>\n",
+       "      <td>Coste barato, Poco picante, Recetas mexicanas</td>\n",
+       "      <td>1 pechuga de pollo cocida y desmenuzada , 4 ji...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 URL  \\\n",
+       "0  https://www.recetasgratis.net/receta-de-tortit...   \n",
+       "\n",
+       "                            Nombre    Categoria Comensales Tiempo  \\\n",
+       "0  Tortitas de pollo en salsa roja  Aves y caza          6    30m   \n",
+       "\n",
+       "              Tipo       Dificultad  \\\n",
+       "0  Plato principal  Dificultad baja   \n",
+       "\n",
+       "                                  Caracteristicas  \\\n",
+       "0  Coste barato, Poco picante, Recetas mexicanas    \n",
+       "\n",
+       "                                        Ingredientes  \n",
+       "0  1 pechuga de pollo cocida y desmenuzada , 4 ji...  "
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(recipe_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = ['https://www.recetasgratis.net/receta-de-tortitas-de-pollo-en-salsa-roja-75049.html',\n",
+    "             'https://www.recetasgratis.net/receta-de-nuggets-de-pollo-al-horno-75064.html']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['4', '4']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for url in test_list:\n",
+    "    soup = bs4.BeautifulSoup(requests.get(url).content, 'html.parser')\n",
+    "    recipe = soup.find_all('div', attrs={'class': 'recipe-info'})\n",
+    "\n",
+    "    recipe_url_list = [requests.get(url).url for url in test_list]\n",
+    "    name_list = [soup.find_all('h1', attrs={'class': 'titulo titulo--articulo'})[0].text[10:] for url in test_list]\n",
+    "#     categoria_list = [re.findall('(^.+?)\\\\n', (soup.find_all('ul', attrs={'class': 'breadcrumb'}))[0].text[9:])[0] for url in test_list]\n",
+    "#     comensales_list = [recipe[0].find('span', attrs={'class': 'property comensales'}).text[:-11] for url in test_list]\n",
+    "    \n",
+    "    \n",
+    "comensales_list"
+   ]
   }
  ],
  "metadata": {
