--- a/notebooks/2_fsonfilter.ipynb
+++ b/notebooks/2_fsonfilter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[10759 rows x 9 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'comidas_semana': {'categoria': ['Pasta',\n",
+       "   'Carne',\n",
+       "   'Verduras',\n",
+       "   'Legumbres',\n",
+       "   'Arroces y cereales'],\n",
+       "  'tiempo': ['30m', '45m', '10m', '15m']},\n",
+       " 'comidas_finde': {'categoria': ['Verduras',\n",
+       "   'Sopas y cremas',\n",
+       "   'Aves y caza',\n",
+       "   'Ensaladas',\n",
+       "   'Pescado'],\n",
+       "  'tiempo': ['30m',\n",
+       "   '1h 30m',\n",
+       "   '45m',\n",
+       "   'NaN',\n",
+       "   '2h 30m',\n",
+       "   '24h',\n",
+       "   '4h',\n",
+       "   '3h',\n",
+       "   '8h',\n",
+       "   '6h']},\n",
+       " 'cenas_semana': {'categoria': ['Arroces y cereales',\n",
+       "   'Pasta',\n",
+       "   'Carne',\n",
+       "   'Verduras',\n",
+       "   'Pescado',\n",
+       "   'Legumbres'],\n",
+       "  'tiempo': ['30m', '45m', '10m', '15m']},\n",
+       " 'cenas_finde': {'categoria': ['Verduras',\n",
+       "   'Sopas y cremas',\n",
+       "   'Aves y caza',\n",
+       "   'Ensaladas',\n",
+       "   'Pescado'],\n",
+       "  'tiempo': ['30m',\n",
+       "   '1h 30m',\n",
+       "   '45m',\n",
+       "   'NaN',\n",
+       "   '2h 30m',\n",
+       "   '24h',\n",
+       "   '4h',\n",
+       "   '3h',\n",
+       "   '8h',\n",
+       "   '6h']}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preferences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,23 +471,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Comida</th>\n",
-       "      <td>Lomo frito con pimientos: https://www.recetasg...</td>\n",
-       "      <td>Espaguetis con tomate natural y albahaca: http...</td>\n",
-       "      <td>Espaguetis con langostinos: https://www.receta...</td>\n",
-       "      <td>Pasta con salsa de champiñones y queso: https:...</td>\n",
-       "      <td>Bistec de res con cebolla: https://www.recetas...</td>\n",
-       "      <td>Patatas fritas al horno sin aceite: https://ww...</td>\n",
-       "      <td>Ensalada alemana de patata: https://www.receta...</td>\n",
+       "      <td>Carne con tomate: https://www.recetasgratis.ne...</td>\n",
+       "      <td>Spaghetti carbonara con nata: https://www.rece...</td>\n",
+       "      <td>Frijoles borrachos mexicanos: https://www.rece...</td>\n",
+       "      <td>Cachapa de plátano maduro: https://www.recetas...</td>\n",
+       "      <td>Costilla de cerdo a la miel: https://www.recet...</td>\n",
+       "      <td>Coliflor con salsa Buffalo: https://www.receta...</td>\n",
+       "      <td>Pechugas de pollo en salsa verde con mostaza: ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cena</th>\n",
-       "      <td>Albóndigas de atún con tomate: https://www.rec...</td>\n",
-       "      <td>Coca de berenjena y queso: https://www.recetas...</td>\n",
-       "      <td>Chips de calabacín al horno: https://www.recet...</td>\n",
-       "      <td>Macarrones con bechamel: https://www.recetasgr...</td>\n",
-       "      <td>Espinacas a la crema con nata: https://www.rec...</td>\n",
-       "      <td>Pollo al ajillo y limón: https://www.recetasgr...</td>\n",
-       "      <td>Ensalada de patatas con vinagreta de mostaza: ...</td>\n",
+       "      <td>Bollos pelones: https://www.recetasgratis.net/...</td>\n",
+       "      <td>Solomillo al roquefort suave: https://www.rece...</td>\n",
+       "      <td>Espaguetis a la amatriciana: https://www.recet...</td>\n",
+       "      <td>Lasaña de carne y champiñones: https://www.rec...</td>\n",
+       "      <td>Bolitas de bacalao: https://www.recetasgratis....</td>\n",
+       "      <td>Patitas de pollo rebozadas: https://www.receta...</td>\n",
+       "      <td>Alcachofas en salsa verde: https://www.recetas...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -433,35 +495,35 @@
       ],
       "text/plain": [
        "                                                    Lunes  \\\n",
-       "Comida  Lomo frito con pimientos: https://www.recetasg...   \n",
-       "Cena    Albóndigas de atún con tomate: https://www.rec...   \n",
+       "Comida  Carne con tomate: https://www.recetasgratis.ne...   \n",
+       "Cena    Bollos pelones: https://www.recetasgratis.net/...   \n",
        "\n",
        "                                                   Martes  \\\n",
-       "Comida  Espaguetis con tomate natural y albahaca: http...   \n",
-       "Cena    Coca de berenjena y queso: https://www.recetas...   \n",
+       "Comida  Spaghetti carbonara con nata: https://www.rece...   \n",
+       "Cena    Solomillo al roquefort suave: https://www.rece...   \n",
        "\n",
        "                                                Miercoles  \\\n",
-       "Comida  Espaguetis con langostinos: https://www.receta...   \n",
-       "Cena    Chips de calabacín al horno: https://www.recet...   \n",
+       "Comida  Frijoles borrachos mexicanos: https://www.rece...   \n",
+       "Cena    Espaguetis a la amatriciana: https://www.recet...   \n",
        "\n",
        "                                                   Jueves  \\\n",
-       "Comida  Pasta con salsa de champiñones y queso: https:...   \n",
-       "Cena    Macarrones con bechamel: https://www.recetasgr...   \n",
+       "Comida  Cachapa de plátano maduro: https://www.recetas...   \n",
+       "Cena    Lasaña de carne y champiñones: https://www.rec...   \n",
        "\n",
        "                                                  Viernes  \\\n",
-       "Comida  Bistec de res con cebolla: https://www.recetas...   \n",
-       "Cena    Espinacas a la crema con nata: https://www.rec...   \n",
+       "Comida  Costilla de cerdo a la miel: https://www.recet...   \n",
+       "Cena    Bolitas de bacalao: https://www.recetasgratis....   \n",
        "\n",
        "                                                   Sabado  \\\n",
-       "Comida  Patatas fritas al horno sin aceite: https://ww...   \n",
-       "Cena    Pollo al ajillo y limón: https://www.recetasgr...   \n",
+       "Comida  Coliflor con salsa Buffalo: https://www.receta...   \n",
+       "Cena    Patitas de pollo rebozadas: https://www.receta...   \n",
        "\n",
        "                                                  Domingo  \n",
-       "Comida  Ensalada alemana de patata: https://www.receta...  \n",
-       "Cena    Ensalada de patatas con vinagreta de mostaza: ...  "
+       "Comida  Pechugas de pollo en salsa verde con mostaza: ...  \n",
+       "Cena    Alcachofas en salsa verde: https://www.recetas...  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
