--- a/notebooks/3_email.ipynb
+++ b/notebooks/3_email.ipynb
@@ -6,7 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "import os\n",
+    "import smtplib\n",
+    "import schedule\n",
+    "import time"
    ]
   },
   {
@@ -15,36 +20,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "body = 'This will be the week plan'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "email = os.environ.get('EMAIL')\n",
-    "pwd = os.environ.get('PASSWORD')\n",
-    "destination = os.environ.get('DESTINATION')\n",
-    "\n",
-    "email"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
-    "\n",
-    "import os\n",
-    "\n",
+    "subject = 'Your plan for this week'\n",
+    "body = 'This will be the week plan'\n",
     "email = os.getenv('EMAIL')\n",
     "pwd = os.getenv('PASSWORD')\n",
     "destination = os.getenv('DESTINATION')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_email():\n",
+    "    with smtplib.SMTP('smtp.gmail.com',587) as smtp:\n",
+    "        smtp.ehlo()\n",
+    "        smtp.starttls()\n",
+    "        smtp.ehlo()\n",
+    "\n",
+    "        smtp.login(email, pwd)\n",
+    "\n",
+    "        subject \n",
+    "        body\n",
+    "\n",
+    "        msg = f'Subject: {subject}\\n\\n{body}'\n",
+    "\n",
+    "        smtp.sendmail(email, destination, msg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule.every().monday.at(\"10:00\").do(send_email)\n",
+    "\n",
+    "while True:\n",
+    "    schedule.run_pending()\n",
+    "    time.sleep(1)"
    ]
   }
  ],
