--- a/notebooks/3_email.ipynb
+++ b/notebooks/3_email.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,11 +55,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule.every().monday.at(\"10:00\").do(send_email)\n",
+    "schedule.every().saturday.at(\"09:29\").do(send_email)\n",
     "\n",
     "while True:\n",
     "    schedule.run_pending()\n",
     "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_email()"
    ]
   }
  ],
