main_demo finished

--- a/notebooks/4_pipeline_demo.ipynb
+++ b/notebooks/4_pipeline_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,15 +233,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "Alvaro: \"alvaro.gmf@gmail.com\"\n",
+    "Emily \"emilypaz3012@gmail.com\"\n",
+    "Manuel: \"manuelaquinop@gmail.com\"\n",
+    "Miguel: \"jmiguelgonzalez1989@gmail.com\"\n",
+    "Marina: \"m.fernandezban@gmail.com\"\n",
+    "Alvaro: \"alvaro.rodriguezdelgado@gmail.com\"\n",
+    "Alejandra: \"alejandramatias32@gmail.com\"\n",
+    "Clara: \"claracarbocanals@gmail.com\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mwilliamson@windowslive.com, mark_kingson@hotmail.com'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getenv('MAILING_LIST')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mwilliamson@windowslive.com', 'mark_kingson@hotmail.com']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getenv('MAILING_LIST').split(', ')"
+   ]
   }
  ],
  "metadata": {
