--- a/README.md.save.1
+++ b/README.md.save.1
@@ -1,3 +1,4 @@
+
 # The weekly meal planner
 
 Beta version of a tool that generates a customizable meal plan out of a large dataset of screapped recipes
@@ -10,7 +11,7 @@ Python (BeautifulSoup, pandas, numpy, dotenv, smtplib, email.mime), json, Digita
 
 Grocery shopping takes time and effort, but unplanned grocerry shopping takes even longer. When we make meal plans, we reduce the number of visits to the supormarket and the money that we spend, and we can enhance the balance of our diet and be more creative in our cooking. Planning your weekly meal brings a lot of benefits but it can also be a time consuming and tiring process. This tood does the work for you. 
 
-After scraping over 10k recipes from the website RecetasGratis [Link](http://www.recetasgratis.net), you can set up out preferences using the separate json file. The tool then will send you via email a selection of 7 meals and 7 dinners for hte week. 
+After scraping over 10k recipes from the website [Link](http://www.recetasgratis.net), you can set up out preferences using the separate json file. The tool then will send you via email a selection of 7 meals and 7 dinners for hte week. 
 
 ### Configuration 
 
@@ -20,10 +21,36 @@ If you know me, and you'd like to have your name added to the distribution list 
 
 ### Folder structure
 
-Don't forget to create your `.env` file. This program needs a sender and recipient email to deliver the results. pablo.basa@grupokonecta.com
+```
+└── project
+    ├── data_exports
+    ├── .gitignore
+    ├── .env
+    ├── practice.json
+    ├── README.md
+    ├── main.py
+    ├── main_demo.py
+    ├── notebooks
+    │   ├── 1_scrapper.ipynb   
+    │   ├── 2_jsonfilter.ipynb
+    │   ├── 3_email.ipynb
+    │   └── 4_pipeline_demo.ipynb
+    ├── p_email
+    │   ├── m_send.py
+    │   └── __init__.py
+    └── p_filter
+        ├── m_filter.py
+        └── __init__py└── p_filter
+    |   ├── m_filter.py
+    |   └── __init__py
+    └── p_filter
+        ├── m_filter.py
+        └── __init__py
+        
+```
+
+>Don't forget to set up a `.env` file. This program requires a sender and recipient email to deliver the results. 
 
 ### To Do 
 
-In a 2.0 version, the priority would be to work on the ingredients, agreggating the information in each recipe of the week into a single shopping list. 
 
-The challenge here is to process the wide range of terminology used by users when it comes to quanitites (gram, cup, spoon, pinch, dash, drizzle, bit, etc)
